--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -33,6 +33,10 @@ import LogoBookmark from '../assets/logo-bookmark.astro'
   .footer-navigation ul {
     gap: 2rem;
     text-align: center;
+    font-size: 0.875rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 1.25;
   }
 
   .social-navigation ul {
