--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
+import Cta from '../components/cta.astro'
 import DownloadExtension from '@/components/download-extension.astro'
 import Hero from '@/components/hero.astro'
 import Footer from '@/components/footer.astro'
 import Header from '@/components/header.astro'
-import {  Button, buttonVariants } from '@/components/ui/button'
+import { Button, buttonVariants } from '@/components/ui/button'
 import SecondaryHeading from '@/components/ui/secondary-heading.astro'
 
 import '@/styles/global.css'
@@ -151,16 +152,7 @@ import '@/styles/global.css'
     </section>
     <section class='py-16 bg-primary-400 text-neutral-100'>
       <div class='container'>
-        <div class='text-center'>
-          <p>35.000+ already joined</p>
-          <SecondaryHeading>
-            Stay up-to-date with what we're doing
-          </SecondaryHeading>
-        </div>
-        <form>
-          <input type='email' name='email' id='email' />
-          <Button variant='accent' className='capitalize'>Contact us</Button>
-        </form>
+        <Cta />
       </div>
     </section>
   </body>
