use alias in index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import DownloadExtension from '../components/download-extension.astro'
-import Hero from '../components/hero.astro'
-import Footer from '../components/footer.astro'
-import Header from '../components/header.astro'
-import Button from '../components/ui/button.astro'
-import SecondaryHeading from '../components/ui/secondary-heading.astro'
+import DownloadExtension from '@/components/download-extension.astro'
+import Hero from '@/components/hero.astro'
+import Footer from '@/components/footer.astro'
+import Header from '@/components/header.astro'
+import Button from '@/components/ui/button.astro'
+import SecondaryHeading from '@/components/ui/secondary-heading.astro'
 
-import '../styles/global.css'
+import '@/styles/global.css'
 ---
 
 <html lang='en'>
