--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 ---
-import IconFacebook from '../assets/icon-facebook.astro'
-import IconTwitter from '../assets/icon-twitter.astro'
-import LogoBookmark from '../assets/logo-bookmark.astro'
+import IconFacebook from '@/assets/icon-facebook.astro'
+import IconTwitter from '@/assets/icon-twitter.astro'
+import LogoBookmark from '@/assets/logo-bookmark.astro'
 ---
 
 <footer class='py-10 primary-footer bg-neutral-900 text-neutral-100'>
