Fix some errors

--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -20,7 +20,7 @@ const {logo, browser, version, href, class: className, ...props} = Astro.props
     <p>Minimum version {version}</p>
   </header>
   <main class='text-center | card__body'>
-    <a class:list={['capitalize', buttonVariants()]}>
+    <a href='#' class:list={['capitalize', buttonVariants()]} >
       Add & install extension
     </a>
   </main>
