--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -40,10 +40,10 @@ import { buttonVariants } from '@/components/ui/button'
           <li><a href='#'>Pricing</a></li>
           <li><a href='#'>Contact</a></li>
         </ul>
-        <a class:list={['font-inherit desktop-login-button', buttonVariants({variant: 'accent', size: 'wide'})]}>
+        <a href='#' class:list={['font-inherit desktop-login-button', buttonVariants({variant: 'accent', size: 'wide'})]}>
           Login
         </a>
-        <a class:list={['font-inherit mobile-login-button', buttonVariants({variant: 'outline', size: 'wide'})]}>
+        <a href='#' class:list={['font-inherit mobile-login-button', buttonVariants({variant: 'outline', size: 'wide'})]}>
           Login
         </a>
       </nav>
