--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ import '@/styles/global.css'
                 drag-and-drop interface gives you complete control over how you
                 manage your favourite sites.
               </p>
-              <a class={buttonVariants()}>More Info</a>
+              <a href='#' class={buttonVariants()}>More Info</a>
             </div>
           </article>
           <article
@@ -102,7 +102,7 @@ import '@/styles/global.css'
                 Our powerful search feature will help you find saved sites in no
                 time at all. No need to trawl through all of your bookmarks.
               </p>
-              <a class={buttonVariants()}>More Info</a>
+              <a href='#' class={buttonVariants()}>More Info</a>
             </div>
           </article>
           <article
@@ -122,7 +122,7 @@ import '@/styles/global.css'
                 Easily share your bookmarks and collections with others. Create
                 a shareable link that you can send at the click of a button.
               </p>
-              <a class={buttonVariants()}>More Info</a>
+              <a href='#' class={buttonVariants()}>More Info</a>
             </div>
           </article>
           <!-- TODO: tabs -->
@@ -146,7 +146,7 @@ import '@/styles/global.css'
           </p>
         </div>
         <!-- TODO: FAQs component -->
-        <a class={buttonVariants()}>More Info</a>
+        <a href='#' class={buttonVariants()}>More Info</a>
       </div>
     </section>
     <section class='py-16 bg-primary-400 text-neutral-100'>
