--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -11,10 +11,10 @@ import PrimaryHeading from '@/components/ui/primary-heading.astro'
       new browser tab and see your sites load instantly. Try it for free.
     </p>
     <div class='flex md:block'>
-      <a class:list={['mr-3', buttonVariants()]}>
+      <a href='#' class:list={['mr-3', buttonVariants()]}>
         Get it on Chrome
       </a>
-      <a class:list={buttonVariants({variant: 'neutral'})}>
+      <a href='#' class={buttonVariants({variant: 'neutral'})}>
         Get it on Firefox
       </a>
     </div>
