--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,5 +1,5 @@
 ---
-import { Button } from './ui/button'
+import SubmitForm from './submit-form'
 import SecondaryHeading from './ui/secondary-heading.astro'
 ---
 
@@ -7,10 +7,7 @@ import SecondaryHeading from './ui/secondary-heading.astro'
   <p class='mb-2 md:mb-9 | cta__text'>35.000+ already joined</p>
   <SecondaryHeading> Stay up-to-date with what we're doing </SecondaryHeading>
 </div>
-<form>
-  <input type='email' name='email' id='email' />
-  <Button variant='accent' className='capitalize'>Contact us</Button>
-</form>
+<SubmitForm client:load />
 
 <style>
   .cta__header {
