--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import DownloadExtension from '@/components/download-extension.astro'
 import Hero from '@/components/hero.astro'
 import Footer from '@/components/footer.astro'
 import Header from '@/components/header.astro'
-import { Button, buttonVariants } from '@/components/ui/button'
+import { buttonVariants } from '@/components/ui/button'
 import SecondaryHeading from '@/components/ui/secondary-heading.astro'
 
 import '@/styles/global.css'
