style features header

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -3,9 +3,9 @@ import SecondaryHeading from './ui/secondary-heading.astro'
 import FeaturesTab from './features-tab'
 ---
 
-<div class='text-center'>
-  <SecondaryHeading class='text-neutral-900'>Features</SecondaryHeading>
-  <p>
+<div class='mb-10 text-center'>
+  <SecondaryHeading class='mb-4 text-neutral-900'>Features</SecondaryHeading>
+  <p class='text-balance'>
     Our aim is to make it quick and easy for you to access your favourite
     websites. Your bookmarks sync between your devices so you can access them on
     the go.
