turn secondary-heading into react component

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,11 +1,11 @@
 ---
 import SubmitForm from './submit-form'
-import SecondaryHeading from './ui/secondary-heading.astro'
+import SecondaryHeading from './ui/secondary-heading'
 ---
 
 <div class='mb-8 text-center | cta__header'>
   <p class='mb-2 md:mb-9 | cta__text'>35.000+ already joined</p>
-  <SecondaryHeading> Stay up-to-date with what we're doing </SecondaryHeading>
+  <SecondaryHeading>Stay up-to-date with what we're doing</SecondaryHeading>
 </div>
 <SubmitForm client:load />
 
