--- a/src/components/download-extension.astro
+++ b/src/components/download-extension.astro
@@ -1,6 +1,6 @@
 ---
 import Card from './card.astro'
-import SecondaryHeading from './ui/secondary-heading.astro'
+import SecondaryHeading from './ui/secondary-heading'
 
 const browsers = [
   {
@@ -25,7 +25,7 @@ const browsers = [
 ---
 
 <div class='text-center mb-8 md:mb-14'>
-  <SecondaryHeading class='text-neutral-900 mb-4'>
+  <SecondaryHeading className='text-neutral-900 mb-4'>
     Download the extension
   </SecondaryHeading>
   <p class='text-balance md:max-w-prose md:mx-auto'>
