--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,10 +1,10 @@
 ---
-import SecondaryHeading from './ui/secondary-heading.astro'
+import SecondaryHeading from './ui/secondary-heading'
 import FeaturesTab from './features-tab'
 ---
 
 <div class='mb-10 text-center'>
-  <SecondaryHeading class='mb-4 text-neutral-900'>Features</SecondaryHeading>
+  <SecondaryHeading className='mb-4 text-neutral-900'>Features</SecondaryHeading>
   <p class='text-balance'>
     Our aim is to make it quick and easy for you to access your favourite
     websites. Your bookmarks sync between your devices so you can access them on
