--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Hero from '@/components/hero.astro'
 import Footer from '@/components/footer.astro'
 import Header from '@/components/header.astro'
 import { buttonVariants } from '@/components/ui/button'
-import SecondaryHeading from '@/components/ui/secondary-heading.astro'
+import SecondaryHeading from '@/components/ui/secondary-heading'
 
 import '@/styles/global.css'
 ---
@@ -47,7 +47,7 @@ import '@/styles/global.css'
     <section class='py-16 mb-12 md:py-20 md:mb-16'>
       <div class='container'>
         <div class='text-center'>
-          <SecondaryHeading class='text-neutral-900'>
+          <SecondaryHeading className='text-neutral-900'>
             Frequently Asked Questions
           </SecondaryHeading>
           <p>
