--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -3,7 +3,7 @@ import SecondaryHeading from './ui/secondary-heading'
 import FeaturesTab from './features-tab'
 ---
 
-<div class='mb-10 text-center'>
+<div class='mb-10 text-center max-w-[56ch] m-auto'>
   <SecondaryHeading className='mb-4 text-neutral-900'>Features</SecondaryHeading>
   <p class='text-balance'>
     Our aim is to make it quick and easy for you to access your favourite
