--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,7 @@ import Features from '@/components/features.astro'
 import Hero from '@/components/hero.astro'
 import Footer from '@/components/footer.astro'
 import Header from '@/components/header.astro'
-import { buttonVariants } from '@/components/ui/button'
-import SecondaryHeading from '@/components/ui/secondary-heading'
+import Faq from '@/components/faq.astro'
 
 import '@/styles/global.css'
 ---
@@ -46,17 +45,7 @@ import '@/styles/global.css'
     </section>
     <section class='py-16 mb-12 md:py-20 md:mb-16'>
       <div class='container'>
-        <div class='text-center'>
-          <SecondaryHeading className='text-neutral-900'>
-            Frequently Asked Questions
-          </SecondaryHeading>
-          <p>
-            Here are some of our FAQs. If you have any other questions you´d
-            like answered please feel free to email us.
-          </p>
-        </div>
-        <!-- TODO: FAQs component -->
-        <a href='#' class={buttonVariants()}>More Info</a>
+        <Faq />
       </div>
     </section>
     <section class='py-16 bg-primary-400 text-neutral-100'>
