style faq section

--- a/src/components/faq.astro
+++ b/src/components/faq.astro
@@ -3,13 +3,16 @@ import SecondaryHeading from '@/components/ui/secondary-heading'
 import {buttonVariants} from '@/components/ui/button'
 ---
 <div class='text-center'>
-  <SecondaryHeading className='text-neutral-900'>
+  <SecondaryHeading className='mb-4 text-neutral-900'>
     Frequently Asked Questions
   </SecondaryHeading>
-  <p>
+  <p class='mb-10'>
     Here are some of our FAQs. If you have any other questions you´d
     like answered please feel free to email us.
   </p>
 </div>
 <!-- TODO: FAQs component -->
-<a href='#' class={buttonVariants()}>More Info</a>
+
+<div class='text-center'>
+  <a href='#' class={buttonVariants()}>More Info</a>
+</div>
