--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,58 +1,36 @@
 ---
-import Cta from '../components/cta.astro'
+import Cta from '@/components/cta.astro'
 import DownloadExtension from '@/components/download-extension.astro'
 import Features from '@/components/features.astro'
 import Hero from '@/components/hero.astro'
-import Footer from '@/components/footer.astro'
-import Header from '@/components/header.astro'
 import Faq from '@/components/faq.astro'
-
-import '@/styles/global.css'
+import BaseLayout from '@/layouts/base-layout.astro'
 ---
 
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='viewport' content='width=device-width' />
-    <meta name='generator' content={Astro.generator} />
-    <title>Astro</title>
-    <link rel='preconnect' href='https://fonts.googleapis.com' />
-    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
-    <link
-      href='https://fonts.googleapis.com/css2?family=Rubik:wght@400..500&display=swap'
-      rel='stylesheet'
-    />
-  </head>
-  <body>
-    <Header />
-    <main class='mt-36'>
-      <section class='md:py-20'>
-        <div class='container'>
-          <Hero />
-        </div>
-      </section>
-      <section class='py-16 md:py-20'>
-        <div class='container'>
-          <Features />
-        </div>
-      </section>
-      <section class='py-16 md:py-20'>
-        <div class='container'>
-          <DownloadExtension />
-        </div>
-      </section>
-      <section class='py-16 mb-12 md:py-20 md:mb-16'>
-        <div class='container'>
-          <Faq />
-        </div>
-      </section>
-      <section class='py-16 bg-primary-400 text-neutral-100'>
-        <div class='container'>
-          <Cta />
-        </div>
-      </section>
-    </main>
-    <Footer />
-  </body>
-</html>
+<BaseLayout>
+  <section class='md:py-20'>
+    <div class='container'>
+      <Hero />
+    </div>
+  </section>
+  <section class='py-16 md:py-20'>
+    <div class='container'>
+      <Features />
+    </div>
+  </section>
+  <section class='py-16 md:py-20'>
+    <div class='container'>
+      <DownloadExtension />
+    </div>
+  </section>
+  <section class='py-16 mb-12 md:py-20 md:mb-16'>
+    <div class='container'>
+      <Faq />
+    </div>
+  </section>
+  <section class='py-16 bg-primary-400 text-neutral-100'>
+    <div class='container'>
+      <Cta />
+    </div>
+  </section>
+</BaseLayout>
