--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -11,15 +11,13 @@ import PrimaryHeading from '@/components/ui/primary-heading.astro'
       new browser tab and see your sites load instantly. Try it for free.
     </p>
     <div class='flex md:block'>
-      <a href='#' class:list={['mr-3', buttonVariants()]}>
-        Get it on Chrome
-      </a>
-      <a href='#' class={buttonVariants({variant: 'neutral'})}>
+      <a href='#' class:list={['mr-3', buttonVariants()]}> Get it on Chrome </a>
+      <a href='#' class={buttonVariants({ variant: 'neutral' })}>
         Get it on Firefox
       </a>
     </div>
   </div>
-  <div class='order-1 md:order-2'>
+  <div class='order-1 md:order-2 relative | bg-decorator'>
     <img src='./images/illustration-hero.svg' alt='bookmark screenshot' />
   </div>
 </div>
