--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import BaseLayout from '@/layouts/base-layout.astro'
 ---
 
 <BaseLayout>
-  <section class='md:py-20'>
+  <section class='md:py-20 overflow-hidden'>
     <div class='container'>
       <Hero />
     </div>
