--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,4 +27,20 @@
   .font-inherit {
     font: inherit;
   }
+
+  .bg-decorator:after {
+    content: '';
+    position: absolute;
+    width: 200%;
+    height: 75%;
+    background: hsl(var(--clr-primary-400));
+    bottom: 0;
+    left: 25%;
+    z-index: -1;
+    border-radius: 9999rem;
+  }
+  .bg-decorator--reverse:after {
+    left: -125%;
+    bottom: -20%;
+  }
 }
